# HackArena3.0-ApiWrapper-Python

./: .gitmodules  README.md  pyproject.toml  requirements.txt
src/hackarena3/: __init__.py  auth.py  client.py  config.py  game_token.py  runtime.py  runtime_common.py  runtime_convert.py  runtime_discovery.py  runtime_loop.py  runtime_race.py  types.py
src/hackarena3/proto/achievement/v1/: achievement_admin_pb2.py  achievement_admin_pb2.pyi  achievement_admin_pb2_grpc.py  achievement_public_pb2.py  achievement_public_pb2.pyi  achievement_public_pb2_grpc.py  achievement_stream_pb2.py  achievement_stream_pb2.pyi  achievement_stream_pb2_grpc.py  achievement_types_pb2.py  achievement_types_pb2.pyi
src/hackarena3/proto/auth/v1/: game_token_introspection_pb2.py  game_token_introspection_pb2.pyi  game_token_introspection_pb2_grpc.py  game_token_issuer_pb2.py  game_token_issuer_pb2.pyi  game_token_issuer_pb2_grpc.py  game_token_jwks_pb2.py  game_token_jwks_pb2.pyi  game_token_jwks_pb2_grpc.py  game_token_pb2.py  game_token_pb2.pyi
src/hackarena3/proto/race/v1/: asset_pb2.py  asset_pb2.pyi  asset_pb2_grpc.py  common_pb2.py  common_pb2.pyi  race_pb2.py  race_pb2.pyi  race_pb2_grpc.py  race_table_pb2.py  race_table_pb2.pyi  race_table_pb2_grpc.py  runtime_admin_pb2.py  runtime_admin_pb2.pyi  runtime_admin_pb2_grpc.py  runtime_config_pb2.py  runtime_config_pb2.pyi  runtime_config_pb2_grpc.py  (+18 more)
template/system/: manifest.toml
template/user/src/bot/: __init__.py  __main__.py
tools/: buf.gen.python.yaml  generate_proto.py  generate_sha256.py  package_template_release.py
(+27 files in other folders)
